# Fabric-Ontology-demoAgent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.agentic/: QUICK_REFERENCE_RESERVED_WORDS.md  agent-instructions.md  fabric-ontology-demo-v2.yaml  fabric-ontology-demo.yaml
.agentic/schemas/: bindings-schema.yaml  metadata-schema.yaml  validation-rules.yaml
.agentic/templates/: data-agent-instructions.md  entity-template.yaml  html-slide-template.html  question-template.md  relationship-template.yaml
.github/: dependabot.yml
AutoDemoGenResearch/: ResearchFixes.md  makeitbetter.md
AutoManufacturing-SupplyChain/: .demo-metadata.yaml  .setup-state.yaml  .setup-state.yaml.backup  README.md  demo-questions.md  ontology-structure.md
AutoManufacturing-SupplyChain/Bindings/: bindings.yaml  eventhouse-binding.md  lakehouse-binding.md
AutoManufacturing-SupplyChain/Ontology/: auto-manufacturing.ttl  ontology-diagram-slide.html
CreditFraud/: .demo-metadata.yaml  README.md  demo-questions.md  ontology-structure.md
CreditFraud/Bindings/: bindings.yaml  eventhouse-binding.md  lakehouse-binding.md
CreditFraud/Ontology/: credit-fraud.ttl  ontology-diagram-slide.html
Demo-automation/: .env.example  AddSDK.md  README.md  pyproject.toml
Demo-automation/src/demo_automation/: __init__.py  __main__.py  cli.py  orchestrator.py  sdk_adapter.py  state_manager.py  validator.py
Demo-automation/src/demo_automation/binding/: __init__.py  binding_builder.py  binding_parser.py  sdk_binding_bridge.py  yaml_parser.py
Demo-automation/src/demo_automation/core/: __init__.py  config.py  errors.py  global_config.py
Demo-automation/src/demo_automation/ontology/: __init__.py  sdk_converter.py  ttl_converter.py
Demo-automation/src/demo_automation/platform/: __init__.py  eventhouse_client.py  fabric_client.py  lakehouse_client.py  onelake_client.py
Demo-automation/src/fabric_demo_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Demo-automation/tests/: __init__.py  conftest.py  test_config.py  test_relationship_bindings.py  test_sdk_adapter.py  test_sdk_binding_bridge.py  test_sdk_converter.py  test_validator.py
FreshMart/: .demo-metadata.yaml  .setup-state.yaml.backup  README.md  demo-questions.md  ontology-structure.md
MedicalManufacturing/: README.md
Official_Ontology_Sample_Pack/: Airlines.md
TeaManufacturing-ISA95/: .demo-metadata.yaml  .setup-state.yaml  README.md  demo-questions.md  ontology-structure.md  validate_deployment.py
ZavaManufacturing-ISA95/: .demo-metadata.yaml  .setup-state.yaml  QUICKSTART.md  README.md  demo-questions.md  demo.yaml  ontology-structure.md
demo-water_treatment_plant/: README.md
docs/: agent-workflow.md  architecture.md  cli-reference.md  configuration.md  index.md  troubleshooting.md
fabric-demo/: README.md  pyproject.toml
fabric-demo/src/fabric_demo/: __init__.py  __main__.py  cli.py  client.py  errors.py  loader.py  runner.py  state.py
(+164 files in other folders)
